ver 1.0 html 뼈대

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <body>
         <div>
         <img src="https://fontmeme.com/images/instagram-new-logo.png" width="200px"/>
+        <input type="search" value="검색"/>
         <div>
             <img src="image/tiger.jpg" width="50px">
             <div>
@@ -23,9 +24,22 @@
         </div>
 
         <div>
-            <img src="image/HL1.jpg" height="35px"/>
-            <img src="image/H2.jpg" height="35px"/>
-
+            <div>
+                <div>
+                    <img src="image/HL1.jpg" height="35px"/>
+                </div>
+                <div>
+                    😊
+                </div>
+            </div>
+                <div>
+                    <div>
+                        <img src="image/H2.jpg" height="35px"/>
+                    </div>
+                    <div>
+                        👌
+                    </div>
+                </div>
         </div>
         
         <div>
@@ -39,13 +53,19 @@
             </div>
             <div>
                 팔로잉</br>
-                189
+                999
             </div>
         </div>
 
         <div>아이콘이 들어갈 자리</div>
-        <div>게시물 썸네일이 들어갈 자리</div>
+        <div>
+            <img src="image/thumbnails/1.jpg" width="32%" height="60%"/>
+            <img src="image/thumbnails/2.jpg" width="32%" height="60%"/>
+            <img src="image/thumbnails/3.jpg" width="32%" height="60%"/>
+            <img src="image/thumbnails/4.jpg" width="32%" height="60%"/>
+            <img src="image/thumbnails/5.jpg" width="32%" height="60%"/>
+            
+        </div>
 
     </body>
 </html>
-
